--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ header{
 }
 .navlist{
     padding: 5px;
+    margin-right: 4rem;
     
 }
 .navlist li{
@@ -63,11 +64,11 @@ header{
 .navlist ul{
     display: flex;
     padding: 1cm;
+    gap: 4rem;
    
 }
 .navlist a{
     color: var(--text-color);
-    margin-right: 3rem;
     text-decoration: none;
     font-weight: 500;
     transition: all .50s ease;
